--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 							<h2>Johan Ekdahl</h2>
 						</header>
 						<p>
-							Jag är en driven medarbetare och numera student på EC-Utbildning där jag nyligen påbörjat Javautvecklar-utbildningen,
+							Jag är en resultatinriktad medarbetare och numera student på EC-Utbildning där jag nyligen påbörjat Javautvecklar-utbildningen,
 							innan dess har jag programmerat på fritiden och har alltid gillat att utforska ny teknik, både hårdvara och mjukvara. På gymnasiet gick jag 
 							teknikprogrammet IT-Media men läste även till andra kurser som inte ingick såsom Fysik-2 och en idrottskurs med inriktning på styrkelyft. 
 							Styrketräning och löpträning har legat mig varmt om hjärtat sedan 14 års åldern och har aldrig tappat lusten sedan dess.
