--- a/index.html
+++ b/index.html
@@ -6,40 +6,48 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="icon" href="images/OKidov2.png">
-		<link rel="stylesheet" href="assets/css/main.css" />
-		
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-		
 
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+
+	
 	</head>
 	<body class="is-preload">
-
 		
-		<nav class="navbar navbar-inverse navbar-fixed-top">
+
+		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 			<div class="container-fluid">
-				<div class="navbar-header">
-					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
-					<a class="navbar-brand" href="index.html"><img src="./images/OKidov2.png" alt="OKidov2" width="30px" height="30px" class="d-inline-block align-top"></a>
-				</div>
-				<div id="myNavbar" class="navbar-collapse collapse">
-					<ul class="nav navbar-nav">
-						<li class="nav-item"><a href="#">INTRODUCTION</a></li>
-						<li class="nav-item"><a href="#about">ABOUT ME</a></li>
-						<li class="nav-item"><a href="#projects">PROJECTS</a></li>
-						<li><a href="https://gitlab.com/johan.ekdahl">GITLAB</a></li>
-						<li><a href="https://github.com/j-development">GITHUB</a></li>
-					</ul>
-				</div>
+			  <a class="navbar-brand" href="index.html"><img src="./images/OKidov2.png" alt="OKidov2" width="45px" height="45px" class="d-inline-block align-top"></a>
+			  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			  </button>
+			  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+				  <li class="nav-item">
+					<a class="nav-link active" aria-current="page" href="#">Home</a>
+				  </li>
+				  <li class="nav-item">
+					<a class="nav-link" href="#about">About Me</a>
+				  </li>
+				  <li class="nav-item">
+					<a class="nav-link" href="#projects">Projects</a>
+				  </li>
+				  <li class="nav-item">
+					<a class="nav-link" href="https://gitlab.com/johan.ekdahl">GitLab</a>
+				  </li>
+				  <li class="nav-item">
+					<a class="nav-link" href="https://github.com/j-development">GitHub</a>
+				  </li>
+				</ul>
+			  </div>
 			</div>
-		</nav>
+		  </nav>
+		
+		
+
+
 		<div id="wrapper">
 			
 		<!-- Nav -->
@@ -109,6 +117,7 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 
 	</body>
 </html>
